<resources>
    <string name="app_name">Setting_V1.2.7</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="cancel">取消</string>
    <string name="try_again">重试</string>
    <string name="goon">继续</string>
    <string name="confirm">确认</string>
	<string name="begin">开始</string>
	<string name="send">发送:</string>
	<string name="receive">接收:</string>
    <string name="lockpattern_recording_incorrect_too_short" >"至少连接4个点，请重试"</string>
    <string name="lockpattern_error" >"手势密码不对"</string>
    <string name="lockscreen_access_pattern_start">Pattern started</string>
    <string name="lockscreen_access_pattern_cleared">Pattern cleared</string>
    <string name="lockscreen_access_pattern_cell_added">Cell added</string>
    <string name="lockscreen_access_pattern_detected">Pattern completed</string>
	<string name="button_cmd_name">进入命令模式</string>
	<string name="button_T1_name">T1硬件测试</string>
	<string name="button_rk_name">RK硬件测试</string>
	<string name="button_loader_name">下载程序</string>
	<string name="button_key_name">设置密码</string>
    <string name="key_test_btn_name">按键测试</string>
    <string name="magc_test_btn_name">磁卡测试</string>
    <string name="icc_test_btn_name">IC卡测试</string>
    <string name="rtc_test_btn_name">RTC测试</string>
    <string name="security_test_btn_name">获取安全状态</string>
    <string name="version_test_btn_name">获取版本号</string>
	<string name="buzzer_test_btn_name">蜂鸣器测试</string>
	<string name="led_test_btn_name">LED测试</string>
	<string name="mem_test_btn_name">存储器测试</string>
	<string name="download_app_btn_name">T1程序升级</string>
	<string name="printer_app_btn_name">打印机测试</string>
    <string name="keytest_name"></string>
    <string name="key0_btn_name"></string>
    <string name="key1_btn_name"></string>
    <string name="key2_btn_name"></string>
    <string name="key3_btn_name"></string>
    <string name="key4_btn_name"></string>
    <string name="key5_btn_name"></string>
    <string name="key6_btn_name"></string>
    <string name="key7_btn_name"></string>
    <string name="key8_btn_name"></string>
    <string name="key9_btn_name"></string>
    <string name="keyf1_btn_name"></string>
    <string name="keyf2_btn_name"></string>
    <string name="keyf3_btn_name">F3</string>
    <string name="keyf4_btn_name">F4</string>
    <string name="keyf5_btn_name">F5</string>
    <string name="keyf6_btn_name">F6</string>
    <string name="keyf7_btn_name">F7</string>
    <string name="keyesc_btn_name"></string>
    <string name="keybs_btn_name"></string>
    <string name="keyenter_btn_name"></string>
    <string name="timeout_tag">TimeOut: </string>
    <string name="keyvalue_tag">KeyVal: </string>
    <string name="keyvalue_init">00</string>
    <string name="magctest_name">磁卡测试</string>
     <string name="track_name_tag">磁道</string>
     <string name="success_count_tag">成功</string>
	 <string name="track_value_tag">磁道数据</string>
    <string name="track1_name">1</string>
	<string name="track1_count_init">0</string>
	<string name="track1_value_init">000000000000000000</string>
    <string name="track2_name">2</string>
	<string name="track2_count_init">0</string>
	<string name="track2_value_init">000000000000000000</string>
    <string name="track3_name">3</string>
	<string name="track3_count_init">0</string>
	<string name="track3_value_init">000000000000000000</string>
	<string name="total_name">总计</string>
	<string name="total_count_init">0</string>
	<string name="rest_btn_name">复位</string>
	<string name="icctest_name">ICC测试</string>
	<string name="options_name">选项</string>
	<string name="icc_value_init">返回值</string>
	<string name="status_tag">卡状态</string>
	<string name="status_value_init">卡不存在</string>
	<string name="atr_tag">ATR值</string>
	<string name="atr_value_init">00000000</string>
	<string name="random_tag">随机数</string>
	<string name="random_value_init">00000000</string>
	<string name="ic_card_btn_name">IC</string>
	<string name="sam1_card_btn_name">SAM1</string>
	<string name="sam2_card_btn_name">SAM2</string>
	<string name="sam3_card_btn_name">SAM3</string>
	<string name="nfc_card_btn_name">PICC</string>
    <string name="rtctest_name">RTC测试</string>
	<string name="current_date_title">当前日期与时间</string>
    <string name="current_date_value_init">2014年04月08日  11:42:30</string>
    <string name="set_date_title">设置日期与时间</string>
    <string name="set_date_tag_name">设置值:</string>
    <string name="set_time_value_hint">YYYYMMDDHHMMSS</string>
    <string name="set_date_btn_name">设置RTC</string>
	<string name="securitytest_name">安全状态测试</string>
	<string name="security_status_title">状态值</string>
	<string name="security_status_value_init">FFFFFFFF</string>
	<string name="get_status_btn_name">获取安全状态</string>
	<string name="versiontest_name">获取版本号</string>
	<string name="t1_version_tag">版本号</string>
	<string name="t1_version_value_init">Version1.0</string>
	<string name="get_version_btn_name">获取版本号</string>
	<string name="buzzertest_name">蜂鸣器测试</string>
	<string name="buzzer_test_title">蜂鸣器</string>
	<string name="buzzer_start_btn_name">开始</string>
	<string name="buzzer_stop_btn_name">停止</string>
	<string name="ledtest_name">LED测试</string>
	<string name="led_test_title">LED测试</string>
	<string name="led1_name">LED1</string>
	<string name="led2_name">LED2</string>
	<string name="led3_name">LED3</string>
	<string name="led4_name">LED4</string>
	<string name="download_app">T1程序升级</string>
	<string name="download_btn_name">开始烧写</string>
	<string name="import_text_btn_name">普通</string>
	<string name="import_app_btn_name">应用</string>
	<string name="import_sys_btn_name">系统</string>
	<string name="no_permission">没有访问权限</string>
    <string name="ok">OK</string>
    <string name="download_system_file">/mnt/sdcard/rxsys.bin</string>
    <string name="download_application_file">/mnt/sdcard/apprdk.bin</string>
	<string name="printer_app">打印机测试</string>
	<string name="start_print">打印</string>
	<string name="printer_status_init">请按打印键开始打印</string>
	<string name="fileexplorer_app">选择文件</string>
	<string name="parent_dir_tag">查找范围:</string>
	<string name="parent_dir_name">sdcard</string>
	<string name="file_name_tag">文件名:</string>
	<string name="select_cancel_btn_name">取消</string>
	<string name="select_done_btn_name">打开</string>
	<string name="RDP_test_name" >"RDP测试"</string>
	<string name="Cmd_name" >"命令模式"</string>
	<string name="checkdata">"12346789"</string>
	<string name="photo_name">相片名称</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">蓝牙已连接</string>
    <string name="title_not_connected">蓝牙未连接</string>
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">没有设备匹配</string>
    <string name="none_found">未搜索到设备</string>
    <string name="title_paired_devices">匹配设备</string>
    <string name="title_other_devices">其他设备</string>
    <string name="button_scan">搜索</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="nothing">null</string>
    <string name="return_activity">返回</string>
    <string name="China_unionpay">中国银联</string>
    <string name="use_card_hint">请刷卡\n或插卡</string>
    <string name="date">date</string>
    <string name="consume">消  费</string>
    <string name="setback">撤  销</string>
    <string name="return_goods">退  货</string>
    <string name="permission">预授权</string>
    <string name="off_line">离  线</string>
    <string name="printer">打  印</string>
    <string name="adm">管  理</string>
    <string name="other">其  他</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">开始扫描蓝牙设备</string>
    <string name="menu_stop">停止扫描蓝牙设备</string>
    <string-array name="jazzy_effects">
        <item>Standard</item>
        <item>Tablet</item>
        <item>CubeIn</item>
        <item>CubeOut</item>
        <item>FlipVertical</item>
        <item>FlipHorizontal</item>
        <item>Stack</item>
        <item>ZoomIn</item>
        <item>ZoomOut</item>
        <item>RotateUp</item>
        <item>RotateDown</item>
        <item>Accordion</item>
    </string-array>
    <string name="application_name">Mlaucher_V1.2.3</string>
    <string name="home">Home</string>
    <string name="uid_name">Android Core Apps</string>
    <string name="folder_name"></string>
    <string name="wallpaper_instructions">Set wallpaper</string>
    <plurals name="number_of_items_selected">
        <item quantity="zero">%1$d selected</item>
        <item quantity="one">%1$d selected</item>
        <item quantity="other">%1$d selected</item>
    </plurals>
    <string name="wallpaper_accessibility_name">Wallpaper %1$d of %2$d</string>
    <string name="wallpaper_delete">Delete</string>
    <string name="pick_image">Pick image</string>
    <string name="pick_wallpaper">Wallpapers</string>
    <string name="crop_wallpaper">Crop wallpaper</string>
    <string name="activity_not_found">App isn\'t installed.</string>
    <string name="widgets_tab_label">Widgets</string>
    <string name="widget_adder">Widgets</string>
    <string name="toggle_weight_watcher">Show Mem</string>
    <string name="long_press_widget_to_add">Touch &amp; hold to pick up a widget.</string>
    <string name="market">Shop</string>
    <string name="widget_dims_format">%1$d \u00d7 %2$d</string>
    <string name="external_drop_widget_pick_format" translatable="false">%1$s (%2$d \u00d7 %3$d)</string>
    <string name="external_drop_widget_error">Couldn\'t drop item on this Home screen.</string>
    <string name="external_drop_widget_pick_title">Choose widget to create</string>
    <string name="rename_folder_label">Folder name</string>
    <string name="rename_folder_title">Rename folder</string>
    <string name="rename_action">OK</string>
    <string name="cancel_action">Cancel</string>
    <string name="menu_item_add_item">Add to Home screen</string>
    <string name="group_applications">Apps</string>
    <string name="group_shortcuts">Shortcuts</string>
    <string name="group_widgets">Widgets</string>
    <string name="completely_out_of_space">No more room on your Home screens.</string>
    <string name="out_of_space">No more room on this Home screen.</string>
    <string name="hotseat_out_of_space">No more room on the hotseat.</string>
    <string name="invalid_hotseat_item">This widget is too large for the hotseat.</string>
    <string name="title_select_shortcut">Choose shortcut</string>
    <string name="title_select_application">Choose app</string>
    <string name="all_apps_button_label">Apps</string>
    <string name="all_apps_home_button_label">Home</string>
    <string name="delete_zone_label_workspace">Remove</string>
    <string name="delete_zone_label_all_apps">Uninstall</string>
    <string name="delete_target_label">Remove</string>
    <string name="tmp_title">标题</string>
    <string name="hint_text">标签</string>
    <string name="btn_end">完        成</string>
</resources>