<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="horizontal" 
    android:padding="5dp">
    
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0px"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="top"
        >
        <Button
	        android:id="@+id/key_test_btn"
	        android:layout_width="fill_parent"
	        android:layout_height="60sp"
	        android:text="@string/key_test_btn_name" 
	        />
        
        <Button
	        android:id="@+id/printer_app_btn"
	        android:layout_width="fill_parent"
	        android:layout_height="60sp"
	        android:text="@string/printer_app_btn_name" 
	        />
        
        <Button
	        android:id="@+id/magc_test_btn"
	        android:layout_width="fill_parent"
	        android:layout_height="60sp"
	        android:text="@string/magc_test_btn_name" 
	        />
	
	    <Button
	        android:id="@+id/icc_test_btn"
	        android:layout_width="fill_parent"
	        android:layout_height="60sp"
	        android:text="@string/icc_test_btn_name" 
	        />
	    
	    <Button
	        android:id="@+id/rtc_test_btn"
	        android:layout_width="fill_parent"
	        android:layout_height="60sp"
	        android:text="@string/rtc_test_btn_name" 
	        />
	
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0px"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="top"
        >
	    <Button
	        android:id="@+id/security_test_btn"
	        android:layout_width="fill_parent"
	        android:layout_height="60sp"
	        android:text="@string/security_test_btn_name" 
	        />
	    
        <Button
	        android:id="@+id/version_test_btn"
	        android:layout_width="fill_parent"
	        android:layout_height="60sp"
	        android:text="@string/version_test_btn_name" 
	        />
	
	    <Button
	        android:id="@+id/buzzer_test_btn"
	        android:layout_width="0dp"
	        android:layout_height="60sp"
	        android:layout_weight="1"	
	        android:text="@string/buzzer_test_btn_name" 
	        android:visibility="gone"
	        />

	     <Button
	        android:id="@+id/led_test_btn"
	        android:layout_width="fill_parent"
	        android:layout_height="60sp"
	        android:text="@string/led_test_btn_name" 
	        />   

	    <Button
	        android:id="@+id/mem_test_btn"
	        android:layout_width="fill_parent"
	        android:layout_height="60sp"
	        android:text="@string/mem_test_btn_name" 
	        android:visibility="gone"
	        />

	    <Button
	        android:id="@+id/download_app_btn"
	        android:layout_width="fill_parent"
	        android:layout_height="60sp"
	        android:text="@string/download_app_btn_name" 
	        />
	
	    <Button
	        android:id="@+id/button_sleep"
	        android:layout_width="fill_parent"
	        android:layout_height="60sp"
	        android:text="ddd"
	        />
	    
    </LinearLayout>
	    
</LinearLayout>