<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/title_magc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="magc测试"
        android:textColor="#0000ff"
        android:padding="10dp"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/magc_line2"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/title_magc"
        android:background="#ff0000" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/magc_line1"
        android:layout_below="@+id/magc_line2"
        android:layout_marginBottom="0dip" >

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/magc_line2"
            android:gravity="center"
            android:orientation="vertical" >

            <TableRow android:gravity="center" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="80sp"
                    android:layout_weight="1"
                    android:background="@drawable/textview_border"
                    android:gravity="center"
                    android:text="@string/track_name_tag"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="80sp"
                    android:layout_weight="1"
                    android:background="@drawable/textview_border"
                    android:gravity="center"
                    android:text="@string/success_count_tag"
                    android:textColor="@color/blue"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="80sp"
                    android:layout_weight="4"
                    android:background="@drawable/textview_border"
                    android:gravity="center"
                    android:text="@string/track_value_tag"
                    android:textColor="@color/blue"
                    android:textSize="25sp" />
            </TableRow>

            <TableRow android:gravity="center" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="150sp"
                    android:layout_weight="1"
                    android:background="@drawable/textview_border"
                    android:gravity="center"
                    android:text="@string/track1_name"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/track1_count"
                    android:layout_width="0dp"
                    android:layout_height="150sp"
                    android:layout_weight="1"
                    android:background="@drawable/textview_border"
                    android:gravity="center"
                    android:text="@string/track1_count_init"
                    android:textColor="@color/blue"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/track1_value"
                    android:layout_width="0dp"
                    android:layout_height="150sp"
                    android:layout_weight="4"
                    android:background="@drawable/textview_border"
                    android:gravity="center"
                    android:text="@string/track1_value_init"
                    android:textColor="@color/blue"
                    android:textSize="25sp"
                    android:padding="2dp"
                     />
            </TableRow>

            <TableRow android:gravity="center" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="90sp"
                    android:layout_weight="1"
                    android:background="@drawable/textview_border"
                    android:gravity="center"
                    android:text="@string/track2_name"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/track2_count"
                    android:layout_width="0dp"
                    android:layout_height="90sp"
                    android:layout_weight="1"
                    android:background="@drawable/textview_border"
                    android:gravity="center"
                    android:text="@string/track2_count_init"
                    android:textColor="@color/blue"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/track2_value"
                    android:layout_width="0dp"
                    android:layout_height="90sp"
                    android:layout_weight="4"
                    android:background="@drawable/textview_border"
                    android:gravity="center"
                    android:text="@string/track2_value_init"
                    android:textColor="@color/blue"
                    android:textSize="25sp" 
                    android:padding="2dp"
                    />
            </TableRow>

            <TableRow android:gravity="center" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="150sp"
                    android:layout_weight="1"
                    android:background="@drawable/textview_border"
                    android:gravity="center"
                    android:text="@string/track3_name"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/track3_count"
                    android:layout_width="0dp"
                    android:layout_height="150sp"
                    android:layout_weight="1"
                    android:background="@drawable/textview_border"
                    android:gravity="center"
                    android:text="@string/track3_count_init"
                    android:textColor="@color/blue"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/track3_value"
                    android:layout_width="0dp"
                    android:layout_height="150sp"
                    android:layout_weight="4"
                    android:background="@drawable/textview_border"
                    android:gravity="center"
                    android:text="@string/track3_value_init"
                    android:textColor="@color/blue"
                    android:textSize="25sp"
                    android:padding="2dp"
                     />
            </TableRow>

            <TableRow android:gravity="center" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="80sp"
                    android:layout_weight="1"
                    android:background="@drawable/textview_border"
                    android:gravity="center"
                    android:text="@string/total_name"
                    android:textSize="25sp" 
                    />

                <TextView
                    android:id="@+id/total_count"
                    android:layout_width="0dp"
                    android:layout_height="80sp"
                    android:layout_weight="1"
                    android:background="@drawable/textview_border"
                    android:gravity="center"
                    android:text="@string/total_count_init"
                    android:textColor="@color/blue"
                    android:textSize="25sp" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="80sp"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:onClick="returnBtnOnClickHandler"
                    android:text="@string/rest_btn_name"
                    android:textSize="25sp" />
            </TableRow>
        </TableLayout>
    </ScrollView>

    <TextView
        android:id="@+id/magc_line1"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/ll_tool"
        android:layout_alignParentLeft="true"
        android:background="#ff0000" />
    
	<include 
	    android:id="@+id/ll_tool"
	    layout="@layout/hardware_toolbar_layout"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    />
	
    <ImageView
        android:id="@+id/magc_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:src="@drawable/bg_transport" />

</RelativeLayout>