<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
	<TextView
        android:id="@+id/title_rtc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="RTC测试"
        android:textColor="#0000ff"
        android:padding="10dp"
        android:textSize="50sp" 
        android:gravity="center"
        />
	<TextView
        android:id="@+id/led_line1"
        android:layout_width="fill_parent"
        android:layout_below="@+id/title_rtc"
        android:layout_height="1dp"
        android:background="#ff0000" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" 
        android:layout_above="@+id/ll_ctd">   
       <TextView
			android:layout_width="0dp"
			android:layout_height="70sp"
			android:layout_weight="1"
			android:gravity="center"
      		android:background="@drawable/textview_title"
     		android:textColor="@color/red"        
     		android:textSize="30sp"
      		android:text="@string/current_date_title" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/ll_ctd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_above="@+id/ll_dt">
       <TextView
        android:id="@+id/current_date_value"
		android:layout_width="0dp"
    	android:layout_height="100sp"
		android:layout_weight="1"
    	android:gravity="center"
        android:background="@drawable/textview_border"
       	android:textSize="30sp"
       	android:textColor="@color/blue"
        android:text="@string/current_date_value_init" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/ll_dt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" 
        android:layout_centerInParent="true">
       <TextView
		android:layout_width="0dp"
    	android:layout_height="70sp"
    	android:layout_weight="1"
    	android:gravity="center"
        android:background="@drawable/textview_title"
       	android:textColor="@color/red"        
       	android:textSize="30sp"
        android:text="@string/set_date_title" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/ll_input"
        android:layout_width="match_parent"
        android:layout_height="100sp" 
        android:layout_below="@+id/ll_dt"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        >

        <TextView
            android:id="@+id/set_date_tag"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
        	android:background="@drawable/textview_title"            
            android:textSize="30sp"
            android:text="@string/set_date_tag_name" 
            android:padding="5dp"
            android:gravity="center"/>

        <EditText
            android:id="@+id/set_time_value"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_alignBottom="@+id/set_date_tag"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10sp"
            android:layout_toRightOf="@+id/set_date_tag"
            android:layout_marginLeft="10sp"
            android:ems="14"
            android:maxLength="14"
        	android:background="@drawable/textview_border"
            android:textSize="30sp"
            android:textColor="@color/blue" 
            android:hint="@string/set_time_value_hint"
            android:inputType="number" 
            android:padding="5dp"
            >
            <requestFocus />
        </EditText>

    </RelativeLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_below="@+id/ll_input">
    	<Button
			android:layout_width="0dp"
	    	android:layout_height="100sp"
	    	android:layout_weight="1"
	    	android:onClick="setDateBtnOnClickHandler"
	        android:textSize="30sp"
	        android:text="@string/set_date_btn_name" 
	        android:padding="10dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/led_line2"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#ff0000" 
        android:layout_above="@+id/ll_tool"
        />

    <include 
	    android:id="@+id/ll_tool"
	    layout="@layout/hardware_toolbar_layout"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
	    />
    
    <ImageView
        android:id="@+id/rtc_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:src="@drawable/bg_transport" />
</RelativeLayout>