<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/title_led"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="LED测试"
        android:textColor="#0000ff"
        android:padding="10dp"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/led_line1"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/title_led"
        android:background="#ff0000" />

    <TextView
        android:id="@+id/led_line2"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/ll_tool"
        android:layout_alignParentLeft="true"
        android:background="#ff0000" />

    <include 
	    android:id="@+id/ll_tool"
	    layout="@layout/hardware_toolbar_layout"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
	    />
    

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/led_line1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="如果LED灯亮起即LED工作正常"
        android:textColor="#ff0000" 
        android:textSize="20sp"/>

	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:background="@drawable/textview_border"
        android:orientation="vertical" 
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        >

		<RadioButton
	        android:id="@+id/led1"
	        android:layout_width="wrap_content"
	        android:layout_height="100dp"
	        android:textColor="@color/blue"
	        android:textSize="30sp"
	        android:text="@string/led1_name" 
	        android:enabled="false"
	        />
	
	    <RadioButton
	        android:id="@+id/led2"
	        android:layout_width="wrap_content"
	        android:layout_height="100dp"
	        android:textColor="@color/blue"
	        android:textSize="30sp"
	        android:text="@string/led2_name"
	        android:enabled="false"
	         />
	
	    <RadioButton
	        android:id="@+id/led3"
	        android:layout_width="wrap_content"
	        android:layout_height="100dp"
	        android:textColor="@color/blue"
	        android:textSize="30sp"
	        android:text="@string/led3_name" 
	        android:enabled="false"
	        />
	    
	    <RadioButton
	        android:id="@+id/led4"
	        android:layout_width="wrap_content"
	        android:layout_height="100dp"
	        android:textColor="@color/blue"
	        android:textSize="30sp"
	        android:text="@string/led4_name"
	        android:enabled="false"
	        />
	</LinearLayout>
    <ImageView
        android:id="@+id/led_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:src="@drawable/bg_transport" />
	
     <TextView 
        android:id="@+id/tv_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="等待LED关闭..."
        android:textSize="30sp"
        android:textColor="#ff0000"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        />
</RelativeLayout>